fixed button spacing on menu cards

--- a/style.css
+++ b/style.css
@@ -137,3 +137,6 @@
 .experiment-nav{
   background-color: #B6F2F7;
 }
+.menuBtnStyle{
+  margin: 5px;
+}
